# transcript_converter

./: .gitignore  README.md  __init__.py  cli.py  convert.py  known_apps.py  post_proc_item.py  proc_asr.py  proc_ww.py  pyproject.toml  requirements.txt
transcript_converter/: __init__.py  cli.py  convert.py  known_apps.py  post_proc_item.py  proc_asr.py
