[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "aapb-transcript-converter"
version = "0.83"
description = "Python package to read MMIF files to create transcripts in AAPB Transcript JSON, WebVTT, and other formats, along with associated transcript metadata."
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
dependencies = [
    "mmif-python>=1.1.2"
]

[project.scripts]
aatc = "transcript_converter.cli:main"

[project.urls]
"Homepage" = "https://github.com/WGBH-MLA/transcript_converter"
"Source" = "https://github.com/WGBH-MLA/transcript_converter"
